# digitalproducts

./: .gitignore  .prettierignore  AGENTS.md  DESIGN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.agents/: README.md
.agents/skills/: README.md
.ralph/: current-events  current-loop-id  events-20260531-194145.jsonl  history.jsonl
.ralph/agent/: summary.md
docs/decisions/: README.md  brand.md
docs/imps/: IMP-001-init-product.md  IMP-002-advanced-caregiver-strategy.md  IMP-002-comprehensive-strategy.md  IMP-003-productionizing-agent-employment.md  IMP-003-scientific-foundation.md  IMP-004-boutique-facility-kit.md  IMP-004-human-action-plan-mvp.md  IMP-005-caregiver-market-research-direction.md  IMP-006-adjacent-product-research.md  IMP-007-next-gen-caregiver-products.md  IMP-008-chat-agent-offering.md
docs/research/: README.md  research-resource.md
docs/scratchpad/: claudesession.md
marketplaces/: README.md
marketplaces/etsy/: README.md
marketplaces/gumroad/: README.md
products/: README.md
products/aging-parent-handoff-kit/: README.md  product.ts
products/care-pact-sibling-coordination-kit/: README.md  product.ts
products/caregiver-command-kit/: README.md
products/executor-first-30-days-estate-admin-kit/: README.md  product.ts
products/hospital-to-home-discharge-kit/: README.md  product.ts
scripts/: README.md
site/: index.html  tsconfig.json  vite.config.ts
site/src/: components.ts  (+4 more)
src/: components.ts  data.ts  main.ts  style.css
tests/: test_package.py
(+62 files in other folders)
