[project]
name = "digitalproducts-ops"
version = "0.1.0"
description = "Local automation helpers for digital product operations"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.14",
    "ty>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/digitalproducts_ops"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "PTH", "RET", "RUF"]

[tool.ty.environment]
root = ["./src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
